--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,3 +1,22 @@
-body {
+body,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+a,
+ul,
+li,
+p {
   margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
