--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -3,32 +3,22 @@
   margin: 0 auto;
   display: flex;
 
-  &__slider-container {
+  &__container {
     width: 1040px;
     height: 400px;
     display: flex;
   }
 
-  &__button-left {
-    margin-right: 16px;
-    z-index: 1;
-  }
-
-  &__button-right {
-    margin-left: 16px;
-    z-index: 1;
+  &__button {
     cursor: pointer;
-  }
+    z-index: 1;
 
-  &__paging {
-    display: flex;
-    width: 124px;
-    height: 4px;
-  }
+    &--left {
+      margin-right: 16px;
+    }
 
-  &__image {
-    width: 100%;
-    height: 100%;
-
+    &--right {
+      margin-left: 16px;
+    }
   }
 }
