--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -32,6 +32,7 @@
 
   &__image {
   display: flex;
+  object-fit: contain;
   height: 196px;
   width: 208px;
   margin-bottom: 24px;
@@ -58,8 +59,8 @@
     &--old {
     color: #89939a;
     font-weight: 600;
-    text-decoration: line-through;
     margin-left: 8px;
+    text-decoration: line-through;
     }
   }
 
