Implement reusable dropdown + add icons + typography.scss

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-// vars
+$colorGrayPrimary: #313237;
+$graySecondary: #89939A;
+$grayIconsPlaceholders: #B4BDC4;
+$grayElements: #E2E6E9;
+$grayBackground: #FAFBFC;
+$white: #FFFFFF;
+$green: #27AE60;
+$red: #EB5757;
+
