--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -1,10 +1,11 @@
+@import "./mixins";
+
 .h1 {
-  @media (max-width: 639px) {
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 15px;
-  }
-  @media (min-width: 640px) {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+
+  @include onTabletAndDesktop {
     font-weight: 800;
     font-size: 48px;
     line-height: 56px;
@@ -13,12 +14,11 @@
 }
 
 .h2 {
-  @media (max-width: 639px) {
-    font-weight: 800;
-    font-size: 22px;
-    line-height: 140%;
-  }
-  @media (min-width: 640px) {
+  font-weight: 800;
+  font-size: 22px;
+  line-height: 140%;
+
+  @include onTabletAndDesktop {
     font-weight: 800;
     font-size: 32px;
     line-height: 41px;
@@ -27,12 +27,11 @@
 }
 
 .h3 {
-  @media (max-width: 639px) {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 26px;
-  }
-  @media (min-width: 640px) {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 26px;
+
+  @include onTabletAndDesktop {
     font-weight: 800;
     font-size: 22px;
     line-height: 140%;
@@ -40,12 +39,11 @@
 }
 
 .h4 {
-  @media (max-width: 639px) {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-  }
-  @media (min-width: 640px) {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+
+  @include onTabletAndDesktop {
     font-weight: 700;
     font-size: 20px;
     line-height: 26px;
