--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -1,2 +1,43 @@
-@import url('../../styles/_utils.scss');
-// styles go here
+@import '../../styles/utils';
+
+.home-page {
+  padding-top: 24px;
+  padding-bottom: 64px;
+
+  @include onTablet {
+    padding-top: 32px;
+  }
+
+  @include onDesktop {
+    padding-top: 56px;
+  padding-bottom: 80px;
+  }
+
+  &__title {
+    margin-bottom: 56px;
+
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 41px;
+    letter-spacing: -1%;
+
+    @include onTabletAndDesktop {
+      font-size: 48px;
+      line-height: 56px;
+    }
+
+    color: $colorGrayPrimary;
+  }
+
+  &__banner {
+    margin-bottom: 80px;
+  }
+
+  &__product-slider {
+    margin-bottom: 80px;
+  }
+
+  &__categories {
+    margin-bottom: 80px;
+  }
+}
