--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -1,9 +1,9 @@
 @import "./mixins";
 
-.h1 {
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 15px;
+h1 {
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 41px;
 
   @include onTabletAndDesktop {
     font-weight: 800;
@@ -13,7 +13,7 @@
   }
 }
 
-.h2 {
+h2 {
   font-weight: 800;
   font-size: 22px;
   line-height: 140%;
@@ -26,7 +26,7 @@
   }
 }
 
-.h3 {
+h3 {
   font-weight: 700;
   font-size: 20px;
   line-height: 26px;
@@ -38,7 +38,7 @@
   }
 }
 
-.h4 {
+h4 {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
