--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,10 +1,15 @@
 @import '../../styles/utils';
 
 .banner {
-  // min-width: 320px;
-  margin: 0 auto;
+  min-width: 320px;
+  // margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
+  @include onTablet {
+    width: 592px;
+  }
 
   @include onDesktop {
     width: 1136px;
@@ -12,6 +17,7 @@
 
   &__container {
     display: flex;
+
     width: 320px;
     height: 352px;
 
@@ -22,14 +28,20 @@
   }
 
   &__button {
+    height: 190px !important;
+
+    @include onDesktop {
+      height: 400px !important;
+    }
+
     cursor: pointer;
 
     &--left {
-      margin-right: 16px;
+      // margin-right: 16px;
     }
 
     &--right {
-      margin-left: 16px;
+      // margin-left: 16px;
     }
   }
 
