Change ArrowButton component, and use it in Banner

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   box-sizing: border-box;
-  font-family: 'Mont';
+  font-family: 'Mont', sans-serif;
   width: 212px;
   background: #fff;
   border: 1px solid #e2e6e9;
