improve device details page layout

--- a/src/pages/DeviceDetailsPage/DeviceDetailsPage.scss
+++ b/src/pages/DeviceDetailsPage/DeviceDetailsPage.scss
@@ -1,6 +1,5 @@
 @import "../../styles/utils";
 
-
 .device_details {
   &__title {
     margin-bottom: 40px;
@@ -28,10 +27,38 @@
   }
 
   &__product {
-    margin-bottom: 80px;
+    margin-bottom: 56px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 80px;
+    }
   }
 
   &__about-product {
-    margin-bottom: 80px;
+    margin-bottom: 56px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 80px;
+    }
+  }
+
+  &__slider-products {
+    margin-bottom: 56px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 80px;
+    }
   }
 }
