--- a/src/pages/DeviceDetailsPage/DeviceDetailsAbout/DeviceDetailsAbout.scss
+++ b/src/pages/DeviceDetailsPage/DeviceDetailsAbout/DeviceDetailsAbout.scss
@@ -22,7 +22,16 @@
   &__details {
     display: flex;
     flex-direction: column;
+    margin-bottom: 56px;
     gap: 32px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 0;
+    }
 
     &__subtitle {
       margin-bottom: 16px;
