Create getById api

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -28,10 +28,14 @@
   }
 
   &__button {
-    height: 190px !important;
+    height: 190px;
 
     @include onDesktop {
-      height: 400px !important;
+      height: 400px;
+    }
+
+    &.test {
+      // height: ;
     }
 
     cursor: pointer;
