--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,1 +1,25 @@
-// for placeholders
+%upperCase {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 11px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+%buttonText {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+%bodyText {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+%smallText {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+}
