--- a/src/components/SliderProducts/SliderProducts.scss
+++ b/src/components/SliderProducts/SliderProducts.scss
@@ -15,6 +15,10 @@
     justify-content: space-between;
   }
 
+  &__slider {
+    display: flex;
+  }
+
   &__button {
     width: 32px;
     height: 32px;
