--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,9 +1,8 @@
-$colorGrayPrimary: #313237;
-$graySecondary: #89939A;
-$grayIconsPlaceholders: #B4BDC4;
-$grayElements: #E2E6E9;
-$grayBackground: #FAFBFC;
-$white: #FFFFFF;
-$green: #27AE60;
-$red: #EB5757;
-$borderWidth: 1px;
+$colorPrimary: #313237;
+$colorSecondary: #89939A;
+$colorIcons: #B4BDC4;
+$colorElements: #E2E6E9;
+$colorHoverAndBG: #FAFBFC;
+$colorwhite: #FFFFFF;
+$colorgreen: #27AE60;
+$colorred: #EB5757;
