--- a/src/components/NumberButton/NumberButton.scss
+++ b/src/components/NumberButton/NumberButton.scss
@@ -4,7 +4,7 @@
   width: 32px;
   height: 32px;
   background-color: transparent;
-  border: $borderWidth solid $grayElements;
+  border: 1px solid $colorElements;
 
   font-family: inherit;
   font-weight: 600;
@@ -12,12 +12,12 @@
   line-height: 16px;
 
   &:hover {
-    border-color: $colorGrayPrimary;
+    border-color: $colorPrimary;
   }
 
   &.selected {
-    border-color: $colorGrayPrimary;
-    background-color: $colorGrayPrimary;
-    color: $white;
+    border-color: $colorPrimary;
+    background-color: $colorPrimary;
+    color: $colorwhite;
   }
 }
