--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -8,28 +8,46 @@
   align-items: center;
 
   @include onTablet {
-    width: 592px;
+    gap: 19px;
   }
 
   @include onDesktop {
-    width: 1136px;
+    gap: 16px;
   }
 
   &__container {
     display: flex;
+    width: calc(100% + 32px);
+    margin-left: -20px;
+    margin-right: -20px;
 
-    width: 320px;
+    @include onTablet {
+      width: 100%;
+      height: 189px;
+      margin-left: 0;
+      margin-right: 0;
+    }
 
     @include onDesktop {
       width: 1040px;
       height: 400px;
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 
   &__button {
-    height: 190px;
+    display: none;
+
+    @include onTablet {
+      display: block;
+      width: 32px;
+      height: 190px;
+    }
 
     @include onDesktop {
+      display: block;
+      width: 32px;
       height: 400px;
     }
 
