--- a/src/components/NumberButton/NumberButton.scss
+++ b/src/components/NumberButton/NumberButton.scss
@@ -18,6 +18,6 @@
   &.selected {
     border-color: $colorPrimary;
     background-color: $colorPrimary;
-    color: $colorwhite;
+    color: $colorWhite;
   }
 }
