--- a/src/components/SquareButton/SquareButton.scss
+++ b/src/components/SquareButton/SquareButton.scss
@@ -38,6 +38,6 @@
   &.selected {
     border-color: $colorPrimary;
     background-color: $colorPrimary;
-    color: $colorwhite;
+    color: $colorWhite;
   }
 }
