--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,6 +3,6 @@ $colorSecondary: #89939A;
 $colorIcons: #B4BDC4;
 $colorElements: #E2E6E9;
 $colorHoverAndBG: #FAFBFC;
-$colorwhite: #FFFFFF;
-$colorgreen: #27AE60;
-$colorred: #EB5757;
+$colorWhite: #FFFFFF;
+$colorGreen: #27AE60;
+$colorRed: #EB5757;
