--- a/src/components/LikeButton/LikeButton.scss
+++ b/src/components/LikeButton/LikeButton.scss
@@ -1,6 +1,7 @@
 @import './../../styles/utils/vars';
 
 .like-button {
+  display: flex; // for avoiding line-height troubles
   width: 40px;
   height: 40px;
   border: 1px solid $colorIcons;
