Change ProductManagerButtons and add it to DevaiceDetailsPage

--- a/src/components/LikeButton/LikeButton.scss
+++ b/src/components/LikeButton/LikeButton.scss
@@ -16,4 +16,9 @@
   &--selected {
     background-image: url('./../../../public/icons/favIsFav16x16.svg');
   }
+
+  &--big {
+    width: 48px;
+    height: 48px;
+  }
 }
