--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,7 @@ $colorIcons: #B4BDC4;
 $colorElements: #E2E6E9;
 $colorHoverAndBG: #FAFBFC;
 $colorWhite: #FFFFFF;
+$colorBlack: #000000;
 $colorGreen: #27AE60;
 $colorRed: #EB5757;
 
