--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,16 @@
 @import '../../styles/utils/mixins';
+@import '../../styles/utils/vars';
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #fff;
+  background: $colorWhite;
   padding: 0;
   box-shadow: 0 1px 0 #e2e6e9;
 }
 
-.header__nav_links {
+.header__links {
   display: flex;
 }
 
