--- a/src/components/PageNavLink/PageNavLink.scss
+++ b/src/components/PageNavLink/PageNavLink.scss
@@ -1,5 +1,27 @@
-.PageNavLink {
-  &:nth-child(n):not(:last-child) {
-    margin-left: 30px;
+@import '../../styles/utils/vars';
+@import '../../styles/utils/extends';
+
+.page-nav-link {
+  @extend %upperCase;
+  display: flex;
+  position: relative;
+  align-items: center;
+  height: 60px;
+  font-weight: 800;
+  color: $colorSecondary;
+
+  &:hover,
+  &--active {
+    color: $colorPrimary;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 4px;
+      background: $colorPrimary;
+      border-radius: 2px;
+    }
   }
 }
