--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,81 +8,20 @@
   background: $colorWhite;
   padding: 0;
   box-shadow: 0 1px 0 #e2e6e9;
-}
 
-.header__links {
-  display: flex;
-}
-
-.nav_icon {
-  width: 16px;
-}
-
-.header__nav_icons {
-  display: flex;
-}
-
-.nav__icon__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 64px;
-  height: 60px;
-  box-shadow: -1px 0 0 #e2e6e9;
-}
-
-.nav_list {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.nav_item:not(:last-child) {
-  margin-right: 34px;
-
-  @include onDesktop() {
-    margin-right: 64px;
+  &__links {
+    display: flex;
   }
-}
 
-.nav_logo {
-  display: block;
-  width: 80px;
-  margin-right: 32px;
-  margin-left: 16px;
-
-  @include onDesktop() {
-    margin-right: 48px;
-    margin-left: 24px;
+  &__logo {
+    display: block;
+    width: 80px;
+    margin-right: 32px;
+    margin-left: 16px;
+  
+    @include onDesktop {
+      margin-right: 48px;
+      margin-left: 24px;
+    }
   }
-}
-
-.nav_link {
-  display: flex;
-  position: relative;
-  align-items: center;
-  height: 60px;
-  font-weight: 800;
-  font-size: 12px;
-  line-height: 11px;
-  text-decoration: none;
-  text-transform: uppercase;
-  white-space: nowrap;
-  color: #89939a;
-}
-
-.nav_link:hover,
-.nav_link.is-active {
-  color: #313237;
-}
-
-.nav_link.is-active::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 4px;
-  background: #313237;
-  border-radius: 2px;
 }
