--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -23,3 +23,9 @@
   font-size: 12px;
   line-height: 15px;
 }
+
+%flexTechCharacteristics {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
