--- a/src/pages/DeviceDetailsPage/DeviceDetailsSelector/DeviceDetailsSelector.scss
+++ b/src/pages/DeviceDetailsPage/DeviceDetailsSelector/DeviceDetailsSelector.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/utils";
+@import '../../../styles/utils/extends';
 
 .selector {
   display: flex;
@@ -84,8 +85,8 @@
   }
 
   &__characteristics {
-    display: flex;
-    justify-content: space-between;
+    @extend %flexTechCharacteristics;
+    font-size: 12px;
   }
 }
 
@@ -99,17 +100,4 @@
   display: flex;
   gap: 8px;
   margin-bottom: 24px;
-}
-
-.characteristics {
-  &__text {
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 15px;
-    color: #89939a;
-
-    &--black {
-      color: #313237;
-    }
-  }
 }
