--- a/src/components/SliderPhotos/SliderPhotos.scss
+++ b/src/components/SliderPhotos/SliderPhotos.scss
@@ -1,190 +1,133 @@
-.swiper {
-  width: 100%;
-  height: 100%;
-  // height: 300px;
-  margin-left: auto;
-  margin-right: auto;
-}
+@import '../../styles/utils';
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
+.slider-photos {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
 
-  background-size: cover;
-  background-position: center;
+  @include onPhone {
+    align-items: center;
+  }
+
+  @include onTabletAndDesktop {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+  
+  @include onTablet {
+    width: 338px;
+  }
+
+  @include onDesktop {
+    width: 560px;
+  }
+  
+  &__main-photo-container {
+    // margin: 0 auto;
+
+    @include onPhone {
+      padding: 6px;
+      margin-bottom: 16px;
+    }
+
+    @include onTablet {
+      width: 288px;
+    }
+
+// DESKTOP IS DONE
+// YOU MUSTN'T DO FOR THIS
+    @include onDesktop {
+      padding: 11px;
+      width: 442px;
+    }
+
+    &__image {
+      display: block;
+      object-fit: contain;
+
+      @include onPhone { // added at 22:38
+        // margin-left: 40px;
+        width: 288px;
+      }
+
+      @include onTablet {
+        width: 288px;
+        padding: 6px;
+      }
+    }
+  }
+
+  &__gallry-container {
+    margin: 0;
+    padding: 0;
+
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+
+    @include onPhone {
+      width: 288px;
+    }
+
+    @include onDesktop {
+      width: 80px;
+      height: 464px;
+    }
+    
+    @include onTablet {
+      width: 35px;
+      height: 230px;
+    }
+
+    &__image {
+      display: block;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+
+      @include onPhone {
+        width: 50px;
+        height: 50px;
+        padding: 4px;
+      }
+
+      @include onTablet {
+        width: 35px;
+        height: 35px;
+        padding: 2px;
+      }
+
+      @include onDesktop {
+        width: 80px;
+        height: 80px;
+        padding: 7px;
+      }
+
+      border: 1px solid #c4c4c4;
+      transition: border-color .3s;
+
+      cursor: pointer;
+
+      &:hover {
+        border-color: #313237;
+      }
+    }
+
+    & .swiper-slide-thumb-active img {
+      border-color: #313237;
+    }
+  }
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+.swiper {
 
-// .swiper {
-//   // width: 100%;
-//   // height: 300px;
-//   // margin-left: auto;
-//   // margin-right: auto;
-// }
+  @include onPhone {
+    width: 100%;
+    height: 100%;
+  }
+}
 
 // .swiper-slide {
-//   // background-size: cover;
-//   // background-position: center;
 // }
-
-.mySwiper2 {
-  height: 80%;
-  width: 100%;
-}
-
-.mySwiper {
-  height: 20%;
-  box-sizing: border-box;
-  padding: 10px 0;
-}
-
-.mySwiper .swiper-slide {
-  width: 25%;
-  height: 100%;
-  opacity: 0.8;
-}
-
-.mySwiper .swiper-slide-thumb-active {
-  opacity: 1;
-}
-
-.swiper-button-disabled {
-  display: none;
-}
-
-// .swiper-slide img {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-// }
-
-
-// @import '../../styles/utils';
-
-// .photo-slider {
-//   min-width: 320px;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-
-//   @include onTablet {
-//     gap: 19px;
-//   }
-
-//   @include onDesktop {
-//     gap: 16px;
-//   }
-
-//   &__container {
-//     display: flex;
-//     width: calc(100% + 32px);
-//     margin-left: -20px;
-//     margin-right: -20px;
-
-//     @include onTablet {
-//       width: 100%;
-//       // height: 189px;
-//       margin-left: 0;
-//       margin-right: 0;
-//     }
-
-//     @include onDesktop {
-//       width: 1040px;
-//       // height: 400px;
-//       margin-left: 0;
-//       margin-right: 0;
-//     }
-//   }
-
-//   &__button {
-//     display: none;
-
-//     @include onTablet {
-//       display: block;
-//       width: 32px;
-//       height: 190px;
-//     }
-
-//     @include onDesktop {
-//       display: block;
-//       width: 32px;
-//       height: 400px;
-//     }
-
-//     cursor: pointer;
-//   }
-
-//   &__paging {
-//     width: 100%;
-//     position: absolute;
-//     // opacity: 0;
-//   }
-
-//   &__pagination li {
-//     // margin: 0 14px;
-//     // display: inline-block;
-//     // width: 14px;
-//     // height: 4px;
-//     // background-color: #e2e6e9;;
-  
-//     // transition: transform .3s background-color .3s;
-
-//     &:hover {
-//       // transform: scale(1.2);
-//     }
-
-//     &.slick-active {
-//       // background-color: #313237;
-//     }
-//   }
-// }
-
-// .slick-list {
-//   width: 100%;
-// }
-
-// .slick-dots {
-//   // width: 1200px;
-//   height: 100%;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-// }
-
-// .slick-dots.slick-thumb {
-//   display: flex;
-//   // flex-direction: row;
-//   // justify-content: space-between;
-// }
-
-// .slick-dots.slick-thumb li {
-//   width: 100%;
-//   // display: flex;
-
-//   // height: 100%;
-//   // width: 6px;
-//   // height: 6px;
-//   // margin: 0 3px;
-//   // border-radius: 999px;
-//   // transition: all 0.5s ease-in-out;
-//   // will-change: width;
-//   // background-color: black;
-// }
-
-// // .slick-dots.slick-thumb li.slick-active {
-// //   background-color: red;
-// //   width: 24px;
-// // }
