Fix pages container
1. Clear App.scss file
  1.1 fonts load to _typography
  1.2 Cursor set up in _normalize
  1.3 Remove App class
2. Create main and container classes for content centering (App.scss)
3. Fix semantics on each page (remove <main>, add <section>s)

--- a/src/pages/FavouritesPage/FavouritePage.scss
+++ b/src/pages/FavouritesPage/FavouritePage.scss
@@ -1,1 +1,26 @@
-// styles go here
+.favourite-page {
+  height: 100%;
+
+  &__breadcrumbs {
+    height: 16px;
+    margin-bottom: 40px;
+    background-color: palegoldenrod;
+  }
+
+  &__title {
+    height: 56px;
+    margin-bottom: 8px;
+    background-color: palegreen;
+  }
+
+  &__count {
+    height: 21px;
+    margin-bottom: 40px;
+    background-color: palevioletred;
+  }
+
+  &__products {
+    height: 272px;
+    background-color: blueviolet;
+  }
+}
