--- a/src/styles/utils/_normalize.scss
+++ b/src/styles/utils/_normalize.scss
@@ -7,6 +7,8 @@ html {
   font-weight: 500;
   font-size: 14px;
   scroll-behavior: smooth;
+
+  cursor: url('../../../public/cursor.cur') 8 4, pointer;
 }
 
 body {
