--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -1,5 +1,26 @@
 @import './mixins';
 
+@font-face {
+  font-family: 'Mont';
+  src: url('../../../public/fonts/Mont-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Mont';
+  src: url('../../../public/fonts/Mont-SemiBold.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Mont';
+  src: url('../../../public/fonts/Mont-Bold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+
 h1 {
   font-weight: 800;
   font-size: 32px;
