--- a/src/components/SliderPhotos/SliderPhotos.scss
+++ b/src/components/SliderPhotos/SliderPhotos.scss
@@ -3,10 +3,7 @@
 .slider-photos {
   display: flex;
   flex-direction: column;
-
-  @include onPhone {
-    align-items: center;
-  }
+  align-items: center;
 
   @include onTabletAndDesktop {
     flex-direction: row-reverse;
@@ -14,6 +11,8 @@
   }
   
   @include onTablet {
+    align-items: flex-start;
+
     width: 338px;
   }
 
@@ -22,38 +21,35 @@
   }
   
   &__main-photo-container {
-    // margin: 0 auto;
+    padding: 6px;
 
-    @include onPhone {
-      padding: 6px;
-      margin-bottom: 16px;
-    }
+    width: 288px;
+    height: 288px;
+
+    margin-bottom: 16px;
 
     @include onTablet {
       width: 288px;
+      height: 288px;
+
+      margin: 0;
     }
 
-// DESKTOP IS DONE
-// YOU MUSTN'T DO FOR THIS
     @include onDesktop {
       padding: 11px;
+
       width: 442px;
+      height: 442px;
+
+      margin: 0;
     }
+  }
 
-    &__image {
-      display: block;
-      object-fit: contain;
-
-      @include onPhone { // added at 22:38
-        // margin-left: 40px;
-        width: 288px;
-      }
-
-      @include onTablet {
-        width: 288px;
-        padding: 6px;
-      }
-    }
+  &__main-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 
   &__gallry-container {
@@ -79,55 +75,44 @@
       height: 230px;
     }
 
-    &__image {
-      display: block;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-
-      @include onPhone {
-        width: 50px;
-        height: 50px;
-        padding: 4px;
-      }
-
-      @include onTablet {
-        width: 35px;
-        height: 35px;
-        padding: 2px;
-      }
-
-      @include onDesktop {
-        width: 80px;
-        height: 80px;
-        padding: 7px;
-      }
-
-      border: 1px solid #c4c4c4;
-      transition: border-color .3s;
-
-      cursor: pointer;
-
-      &:hover {
-        border-color: #313237;
-      }
-    }
-
     & .swiper-slide-thumb-active img {
       border-color: #313237;
     }
   }
-}
 
-.swiper {
-
-  @include onPhone {
+  &__gallry-image {
+    display: block;
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
+    object-fit: contain;
+
+    @include onPhone {
+      width: 50px;
+      height: 50px;
+      padding: 4px;
+    }
+
+    @include onTablet {
+      width: 35px;
+      height: 35px;
+      padding: 2px;
+    }
+
+    @include onDesktop {
+      width: 80px;
+      height: 80px;
+      padding: 7px;
+    }
+
+    border: 1px solid #c4c4c4;
+    transition: border-color .3s;
+
+    cursor: pointer;
+
+    &:hover {
+      border-color: #313237;
+    }
   }
 }
-
-// .swiper-slide {
-// }
