--- a/src/components/SliderPhotos/SliderPhotos.scss
+++ b/src/components/SliderPhotos/SliderPhotos.scss
@@ -57,8 +57,6 @@
     padding: 0;
 
     display: block;
-    width: 100%;
-    height: 100%;
     object-fit: contain;
 
     @include onPhone {
@@ -106,13 +104,13 @@
       padding: 7px;
     }
 
-    border: 1px solid #c4c4c4;
+    border: 1px solid $colorBorder;
     transition: border-color .3s;
 
     cursor: pointer;
 
     &:hover {
-      border-color: #313237;
+      border-color: $colorPrimary;
     }
   }
 }
