--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -7,5 +7,6 @@ $colorWhite: #FFFFFF;
 $colorBlack: #000000;
 $colorGreen: #27AE60;
 $colorRed: #EB5757;
+$colorBorder: #c4c4c4;
 
 $scaleRatio: 1.1;
