Fix ProductList styles

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 272px;
+  width: $productCardWidth;
   border: 1px solid $colorElements;
   padding: 32px;
 
