--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -1,21 +1,16 @@
 @import '../../styles/utils/mixins';
+@import '../../styles/utils/vars';
 
-.catalog {
-  $card-width: 272px;
-  $screens:
-    640px 2,
-    1200px 4
-  ;
-
+.product-list {
   display: grid;
   justify-content: center;
-  grid-template-columns: $card-width;
+  grid-template-columns: $productCardWidth;
   column-gap: 16px;
   row-gap: 40px;
 
-  @each $width, $columns in $screens {
-    @media (min-width: $width) {
-      grid-template-columns: repeat($columns, $card-width);
+  @each $breakpoint, $columnCount in $productListColumns {
+    @media (min-width: $breakpoint) {
+      grid-template-columns: repeat($columnCount, $productCardWidth);
     }
   }
 }
