--- a/src/components/PrimaryButton/PrimaryButton.scss
+++ b/src/components/PrimaryButton/PrimaryButton.scss
@@ -17,5 +17,10 @@
     background: $colorWhite;
     border: 1px solid $colorElements;
     color: $colorGreen;
+
+    &:hover {
+      // box-shadow: none;
+      box-shadow: 0px 3px 13px rgba(39, 174, 96, 0.4);
+    }
   }
 }
