--- a/src/components/ArrowButton/ArrowButton.scss
+++ b/src/components/ArrowButton/ArrowButton.scss
@@ -1,6 +1,6 @@
 @import './../../styles/utils/vars';
 
-.button {
+.arrow-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,15 +16,15 @@
   background-size: contain;
   background-position: center center;
 
-  &.disabled {
+  &--disabled {
     background-image: url('./../../../public/icons/left16x16.svg');
   }
 
-  &:not(.disabled):hover {
+  &:not(.button--disabled):hover {
     border-color: $colorPrimary;
   }
 
-  &.forward {
+  &--forward {
     transform: rotate(180deg);
   }
 }
