--- a/src/components/SliderProducts/SliderProducts.scss
+++ b/src/components/SliderProducts/SliderProducts.scss
@@ -1,4 +1,4 @@
-.slider {
+.slider-products {
   margin: 0 auto;
   transition: 0.3s all ease-out;
 
@@ -10,27 +10,9 @@
     margin-bottom: 28px;
   }
 
-  &__button-container {
+  &__buttons {
     display: flex;
     gap: 16px;
     justify-content: space-between;
-  }
-
-  &__slider {
-    display: flex;
-  }
-}
-
-// Below temporarily styles, don't waste time on it
-.slider-card {
-  width: 272px;
-
-  transition: transform .3s box-shadow .3s;
-
-  cursor: pointer;
-
-  &:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
