--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,4 +9,5 @@ $colorGreen: #27AE60;
 $colorRed: #EB5757;
 $colorBorder: #C4C4C4;
 
-$scaleRatio: 1.1;
+$scaleRatio: 1.05;
+$animationDuration: 0.3s;
