--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -50,7 +50,7 @@
     height: 4px;
     background-color: #e2e6e9;;
   
-    transition: transform .3s background-color .3s;
+    transition: transform $animationDuration background-color $animationDuration ;
 
     &:hover {
       transform: scale(1.2);
