--- a/src/components/SliderPhotos/SliderPhotos.scss
+++ b/src/components/SliderPhotos/SliderPhotos.scss
@@ -105,7 +105,7 @@
     }
 
     border: 1px solid $colorBorder;
-    transition: border-color .3s;
+    transition: border-color $animationDuration;
 
     cursor: pointer;
 
