--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -19,4 +19,9 @@ $productCardWidth: 272px;
 
 $productListColumns:
   $breakpointTablet 2,
-  $breakpointDesktop 4,
+  $breakpointDesktop 4;
+
+$dropDownHeight: 40px;
+$dropDownBorder: 1px;
+$dropDownLeftPadding: 12px;
+$idropDownIemHeight: 32px;
