--- a/src/pages/CatalogPage/CatalogPage.scss
+++ b/src/pages/CatalogPage/CatalogPage.scss
@@ -1,3 +1,6 @@
+@import '../../styles/utils/vars';
+@import '../../styles/utils/mixins';
+
 .catalog-page {
   display: flex;
   flex-direction: column;
@@ -8,6 +11,52 @@
 
   &__subtitle {
     margin-bottom: 40px;
+    color: $colorSecondary;
+  }
+
+  &__dropdown-block {
+    display: flex;
+    margin-bottom: 24px;
+  }
+
+  &__dropdown-item {
+    width: 50%;
+
+    &:not(:last-child) {
+      margin-right: 16px;
+    }
+  }
+
+  &__dropdown-left {
+    @include onTablet {
+      width: 187px;
+    }
+
+    @include onDesktop {
+      width: 176px;
+    }
+  }
+
+  &__dropdown-right {
+    @include onTablet {
+      width: 136px;
+    }
+
+    @include onDesktop {
+      width: 128px;
+    }
+  }
+
+  &__dropdown {
+    width: 50%;
+
+    &:not(:last-child) {
+      margin-right: 16px;
+    }
+
+    @include onTablet {
+      width: 136px;
+    }
   }
 
   &__product-list {
